# scrapp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  exceptions.cpp  exceptions.h  install-boost.sh  request.cpp  request.h  response.cpp  response.h  spider.cpp  spider.h  utils.cpp  utils.h
html/: document.cpp  document.h  element.cpp  element.h  html_exceptions.cpp  html_exceptions.h  types.h
tests/: CMakeLists.txt  html_tests.cpp  request_tests.cpp  test.cpp
